# grimp

./: .bumpversion.cfg  .coveragerc  .gitignore  .importlinter  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Cargo.toml  LICENSE  README.rst  Taskfile.yml  benchmark_build_graph.py  benchmark_walk.py  drawgraph.py  graph.dot  justfile  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: main.yml  release.yml
docs/: Makefile  caching.rst  conf.py  index.rst  installation.rst  make.bat  networkx.rst  usage.rst
rust/: Cargo.toml
rust/src/: caching.rs  containers.rs  dependencies.rs  errors.rs  exceptions.rs  filesystem.rs  graph.rs  graph_building.rs  hierarchy.rs  import_parsing.rs  import_scanning.rs  importgraph.rs  imports.rs  layers.rs  lib.rs  module_expressions.rs  module_finding.rs  parsing.rs  test_utils.rs
rust/src/graph/: cycle_breakers.rs  cycles.rs  direct_import_queries.rs  graph_manipulation.rs  hierarchy_queries.rs  higher_order_queries.rs  import_chain_queries.rs  mod.rs  pathfinding.rs
rust/src/graph/builder/: cache.rs  imports_cache.rs  mod.rs  read_python_file.rs  utils.rs
rust/tests/: large.rs  test_cycles.rs
src/: lib.rs
src/grimp/: __init__.py  exceptions.py  helpers.py  main.py
src/grimp/adaptors/: _layers.py  caching.py  filesystem.py  graph.py  importscanner.py  modulefinder.py  packagefinder.py  rustgraph.py  timing.py
src/grimp/algorithms/: shortest_path.py
src/grimp/application/: config.py  graph.py  scanning.py  usecases.py
src/grimp/application/ports/: caching.py  filesystem.py  graph.py  importscanner.py  modulefinder.py  packagefinder.py
src/grimp/domain/: analysis.py  valueobjects.py
tests/: config.py  conftest.py
tests/adaptors/: filesystem.py  importscanner.py  modulefinder.py  packagefinder.py  timing.py
tests/assets/caching/cachingpackage_to_copy/two/: beta.py
tests/assets/encodingpackage/: imported.py  importer.py  shift_jis_importer.py
tests/assets/multipleroots/rootpackagegreen/: one.py
tests/assets/namespacepackages/locationone/mynamespace/: yellow.py
tests/assets/namespacepackages/locationone/mynamespace/green/: __init__.py
tests/assets/namespacepackages/locationtwo/mynamespace/blue/: alpha.py
tests/assets/syntaxerrorpackage/foo/: one.py
tests/assets/testpackage/: dotted.module.py  utils.py
tests/assets/testpackage/one/: beta.py
tests/assets/testpackage/three/: __init__.py  beta.py
tests/assets/testpackage/two/: gamma.py
tests/benchmarking/: adaptors.py  test_benchmarking.py  test_building_graph.py  test_graph_methods.py
tests/functional/: conftest.py  test_build_and_use_graph.py  test_build_and_use_graph_with_multiple_roots.py  test_build_graph_on_external_packages.py  test_build_graph_on_real_packages.py  test_caching.py  test_encoding_handling.py  test_error_handling.py  test_namespace_packages.py  test_save_graph.py
tests/functional/__snapshots__/: test_build_graph_on_real_packages.ambr
tests/unit/: conftest.py  test_cycles.py  test_exceptions.py
tests/unit/adaptors/: test_caching.py  test_filesystem.py  test_graph.py  test_importscanner.py  test_modulefinder.py  test_packagefinder.py  test_rust_graph.py  test_rustgraph.py
tests/unit/adaptors/graph/: test_chains.py  test_copy.py  test_cycles.py  test_direct_imports.py  test_hierarchy.py  test_layers.py  test_manipulation.py  test_misc.py  test_repr.py
tests/unit/adaptors/test/: test_filesystem.py  test_importscanner.py
tests/unit/application/: test_scanning.py  test_usecases.py
tests/unit/application/graph/: test_chains.py  test_copy.py  test_cycle_breakers.py  test_direct_imports.py  test_hierarchy.py  test_layers.py  test_manipulation.py  test_misc.py  test_repr.py
tests/unit/domain/: test_valueobjects.py
