[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "grimp._rustgrimp"

[project]
name = "grimp"
version = "3.8.2"
license = {text = "BSD 2-Clause License"}
description = "Builds a queryable graph of the imports within one or more Python packages."
authors = [
    {name = "David Seddon", email = "david@seddonym.me"},
]
requires-python = ">=3.9"
dependencies = [
    "joblib>=1.3.0",
    "typing-extensions>=3.10.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Utilities",
]
readme = "README.rst"

[project.urls]
Documentation = "https://grimp.readthedocs.io/"
Source-code = "https://github.com/seddonym/grimp/"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
grimp = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 99
exclude = 'tests/assets/syntaxerrorpackage'
