[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "grimp._rustgrimp"

[project]
name = "grimp"
version = "3.12"
license = {text = "BSD 2-Clause License"}
description = "Builds a queryable graph of the imports within one or more Python packages."
authors = [
    {name = "David Seddon", email = "david@seddonym.me"},
]
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=3.10.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Utilities",
]
readme = "README.rst"

[project.urls]
Documentation = "https://grimp.readthedocs.io/"
Source-code = "https://github.com/seddonym/grimp/"

[dependency-groups]
dev = [
    "import-linter>=2.5",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-benchmark>=5.1.0",
    "pytest-stub>=1.1.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.0",
    "syrupy>=4.9.1",
    "types-pyyaml>=6.0.12.20250915",
    # External packages to attempt to build the graph from.
    # If the versions change, the snapshot tests will fail, and the benchmarks will change.
    "Django==4.2.17", # N.B. Django 5 doesn't support Python 3.9.
    "flask==3.0.3",
    "requests==2.32.3",
    "sqlalchemy==2.0.35",
    "google-cloud-audit-log==0.3.0",
]
docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]
benchmark_ci = [
    "pytest-codspeed>=3.2.0",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
grimp = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 99
exclude = ['tests/assets'] # These are sample packages for tests to run under - we don't want ruff to mess with them.
