[package]
name = "_rustgrimp"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rustgrimp"
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.19"
pyo3-log = "0.12.1"
serde_json = "1.0.103"
rayon = "1.10"
petgraph = "0.6.5"
bimap = "0.6.3"
rustc-hash = "2.1.0"

[dependencies.pyo3]
version = "0.23.4"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
