[package]
name = "_rustgrimp"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rustgrimp"
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = "1.10"
bimap = "0.6.3"
slotmap = "1.0.7"
getset = "0.1.3"
derive-new = "0.7.0"
lazy_static = "1.5.0"
string-interner = "0.18.0"
thiserror = "2.0.11"
itertools = "0.14.0"
tap = "1.0.1"
rustc-hash = "2.1.0"
indexmap = "2.7.1"
regex = "1.11.1"
const_format = "0.2.34"

[dependencies.pyo3]
version = "0.23.4"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
parameterized = "2.0.0"
serde_json = "1.0.137"
