[package]
name = "_rustgrimp"
version = "0.1.0"
edition = "2024"

[lib]
name = "_rustgrimp"
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = "1.11"
bimap = "0.6.3"
slotmap = "1.0.7"
getset = "0.1.6"
derive-new = "0.7.0"
string-interner = "0.19.0"
thiserror = "2.0.16"
itertools = "0.14.0"
tap = "1.0.1"
rustc-hash = "2.1.1"
indexmap = "2.11.0"
regex = "1.11.2"
const_format = "0.2.34"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9"
unindent = "0.2.4"
encoding_rs = "0.8.35"

[dependencies.pyo3]
version = "0.26.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
parameterized = "2.0.0"
serde_json = "1.0.143"
